--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div class="container mt-4">
+        <h1 class="text-center">MyBookList</h1>
+
+        <div class="form-group">
+            <input type="text" id="title" class="form-control mb-2" placeholder="Title">
+            <input type="text" id="author" class="form-control mb-2" placeholder="Author">
+            <input type="text" id="isbn" class="form-control mb-2" placeholder="ISBN#">
+            <button id="submit" class="btn btn-primary">Submit</button>
+        </div>
+
+        <table class="table table-striped mt-4">
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>ISBN#</th>
+                    <th>Action</th>
+                </tr>
+            </thead>
+            <tbody id="book-list"></tbody>
+        </table>
+    </div>
     <script type="text/javascript" src="./script.js">
 </script>
 
